--- a/xrStalker/M_Snork.ltx
+++ b/xrStalker/M_Snork.ltx
@@ -212,10 +212,10 @@ material				= creatures\hoof
 DynamicObjectsCount		= 32
 
 squad_attack_algorithm	= 1
-attack_effector			= m_boar_attack_effector
+attack_effector			= m_snork_attack_effector
 
-attack_params			= m_boar_attack_params
-step_params				= m_boar_step_params
+attack_params			= m_snork_attack_params
+step_params				= m_snork_step_params
 
 LegsCount				= 2
 
