--- a/xrStalker/M_Snork.ltx
+++ b/xrStalker/M_Snork.ltx
@@ -219,6 +219,16 @@ step_params				= m_snork_step_params
 
 LegsCount				= 2
 
+; jump parameters
+jump_delay					= 1000
+jump_factor					= 1.5
+jump_ground_trace_range		= 0.1
+jump_hit_trace_range		= 1.5
+jump_build_line_distance	= 6.0
+jump_min_distance			= 10.0
+jump_max_distance			= 3.0
+jump_max_angle				= 0.6
+
 
 [m_Snork_damage]
 ;bone_name		 = <hit_scale>,-1,<wound_scale>
