--- a/xr_3da/xrGame/environment.ltx
+++ b/xr_3da/xrGame/environment.ltx
@@ -208,7 +208,7 @@ hemi_color		=	0.698, 0.447, 0.322, 1
 sun_color		=	0.996, 0.659, 0.298
 sun_dir			=	-14.0, 292
 
-
+[default_a_02]
 flares			=  	flares_sun_rise
 sky_texture		=	sky\sky_22_cube
 sky_rotation	=	0
