--- a/xrStalker/environment.ltx
+++ b/xrStalker/environment.ltx
@@ -189,6 +189,7 @@ sun_dir			=	-40.0, 60.0
 12:00:00		=	default_a_02
 
 [default_a_01]
+flares			=  	flares_sun_rise
 sky_texture		=	sky\sky_22_cube
 sky_rotation	=	0
 sky_color		=	1.0,    1.0,  	1.0
