--- a/xr_3da/xrGame/w_pb.ltx
+++ b/xr_3da/xrGame/w_pb.ltx
@@ -115,7 +115,7 @@ shell_point		    	 	= -0.35, -0.06, 0.07
 fire_point               	= -0.140000,0.010000,0.030000
 fire_bone                	= wpn_body
 orientation              	= 0,0,0
-position                 	= 0,0,0
+position                 	= -0.03,-0.09,0.1
 visual                   	= weapons\pb\wpn_pb_hud.ogf
 
 anim_holster				= holster
