--- a/xrStalker/w_pb.ltx
+++ b/xrStalker/w_pb.ltx
@@ -76,7 +76,7 @@ rpm              	        = 300
 
 hud              	        = wpn_PB_hud
 normal           	        = 0, 1, 0
-position         	        = -0.03, -0.02, 0.12
+position         	        = -0.05, -0.03, 0.13
 orientation      	        = 0, 0, 0
 ;startup_ammo    	        = 90
 visual           	        = weapons\pb\wpn_pb.ogf
@@ -115,7 +115,7 @@ shell_point		    	 	= -0.35, -0.06, 0.07
 fire_point               	= -0.140000,0.010000,0.030000
 fire_bone                	= wpn_body
 orientation              	= 0,0,0
-position                 	= -0.02,-0.12,0.16
+position                 	= 0,0,0
 visual                   	= weapons\pb\wpn_pb_hud.ogf
 
 anim_holster				= holster
