--- a/xrStalker/m_stalker.ltx
+++ b/xrStalker/m_stalker.ltx
@@ -47,6 +47,8 @@ class                        = AI_STL			; AI class
 
 visual			 = actors\hero\stalker_novice.ogf
 
+time_to_search_for_artefacts = 60000 ; in milliseconds
+
 ph_box0_center 		 = 0.0,  0.9,  0.0
 ph_box0_size 		 = 0.35, 0.9,  0.35
 ph_box1_center 		 = 0.0,  0.6,  0.0
@@ -204,6 +206,8 @@ cform                        = skeleton			; collision class
 class                        = AI_STL			; AI class
 
 visual			 = actors\hero\stalker_novice.ogf
+
+time_to_search_for_artefacts = 60000 ; in milliseconds
 
 ph_box0_center 		 = 0.0,  0.9,  0.0
 ph_box0_size 		 = 0.35, 0.9,  0.35
