--- a/xr_3da/xrGame/m_stalker.ltx
+++ b/xr_3da/xrGame/m_stalker.ltx
@@ -47,7 +47,8 @@ class                        = AI_STL			; AI class
 
 visual			 = actors\hero\stalker_novice.ogf
 
-time_to_search_for_artefacts = 60000 ; in milliseconds
+time_to_search_for_artefacts		= 60000 ; in milliseconds
+distance_to_search_for_artefacts	= 30.0	; in meters
 
 ph_box0_center 		 = 0.0,  0.9,  0.0
 ph_box0_size 		 = 0.35, 0.9,  0.35
@@ -207,7 +208,8 @@ class                        = AI_STL			; AI class
 
 visual			 = actors\hero\stalker_novice.ogf
 
-time_to_search_for_artefacts = 60000 ; in milliseconds
+time_to_search_for_artefacts		= 60000 ; in milliseconds
+distance_to_search_for_artefacts	= 30.0	; in meters
 
 ph_box0_center 		 = 0.0,  0.9,  0.0
 ph_box0_size 		 = 0.35, 0.9,  0.35
