--- a/xrStalker/w_beretta.ltx
+++ b/xrStalker/w_beretta.ltx
@@ -66,8 +66,8 @@ rpm_empty_click 	 		= 200
 ;-----------------------------------------------------------------------------------
 ;hud                      	= wpn_beretta_hud
 hud                      = wpn_FORT_hud
-;visual                   	= weapons\beretta92fs\wpn_beretta92fs.ogf
-visual                   = weapons\fort\wpn_fort.ogf
+visual                   	= weapons\beretta92fs\wpn_beretta92fs.ogf
+;visual                   = weapons\fort\wpn_fort.ogf
 
 normal                   	= 0, 1, 0
 position                 	= -0.03, -0.053, 0.13
