--- a/xr_3da/xrGame/game.ltx
+++ b/xr_3da/xrGame/game.ltx
@@ -106,6 +106,8 @@
   ; level104
   ; level105
 level106
+level107
+level108
 
 [level01]
   name    = fog_dima1
@@ -712,6 +714,17 @@ level106
  offset  = -800.0,     2000.0,    0.0
  id   = 106
 
+ [level107]
+ name   = slipch_al_test
+ caption = "slipch_al_test"
+ offset  = -800.0,     2000.0,    0.0
+ id   = 107
+ 
+ [level108]
+ name   = slipch_al_test2
+ caption = "slipch_al_test2"
+ offset  = -800.0,     2000.0,    0.0
+ id   = 108
  
 [location_0]
   000          = "..."
