--- a/xr_3da/xrGame/M_Snork.ltx
+++ b/xr_3da/xrGame/M_Snork.ltx
@@ -100,6 +100,9 @@ Velocity_WalkFwdDamaged	= 1.3,		3.0,			3.0,		0.2,	2.0
 Velocity_WalkFwdNormal	= 1.75,		2.5,			2.5,		0.02,	3.0	
 Velocity_Drag			= 1.0,		3.0,			3.0,		1,		1
 Velocity_Steal			= 1.5,		3.0,			3.0,		1,		1
+Velocity_Jump_Stand		= 0,		2.4,			2.4,		1,		1	
+Velocity_Jump_Forward	= 9.0,		0,				0,			0.4,	1
+
 
 ; acceleration
 Accel_Generic			= 1.5
