--- a/xrStalker/game.ltx
+++ b/xrStalker/game.ltx
@@ -108,6 +108,7 @@
 level106
 level107
 level108
+level109
 
 [level01]
   name    = fog_dima1
@@ -725,6 +726,12 @@ level108
  caption = "slipch_al_test2"
  offset  = -800.0,     2000.0,    0.0
  id   = 108
+ 
+ [level109]
+ name   = dx9_workshop
+ caption = "dx9_workshop"
+ offset  = -800.0,     2000.0,    0.0
+ id   = 109
  
 [location_0]
   000          = "..."
