--- a/xr_3da/xrGame/zones.ltx
+++ b/xr_3da/xrGame/zones.ltx
@@ -637,14 +637,14 @@ artefacts		=
 BirthProbability = 0.01
 
 idle_particles		= explosions\campfire_04
-blowout_particles	= explosions\campfire_00
+blowout_particles	= damage_fx\burn_creatures00
 
-;hit_small_particles			= damage_fx\burn_creatures2
-;hit_big_particles			= damage_fx\burn_creatures00
-;idle_small_particles		= damage_fx\burn_creatures
-;idle_big_particles			= damage_fx\burn_creatures00
-;entrance_small_particles	= damage_fx\burn_creatures
-;entrance_big_particles		= damage_fx\burn_creatures00 ;
+hit_small_particles			= damage_fx\burn_creatures
+hit_big_particles			= damage_fx\burn_creatures00
+idle_small_particles		= damage_fx\burn_creatures
+idle_big_particles			= damage_fx\burn_creatures00
+entrance_small_particles	= damage_fx\burn_creatures
+entrance_big_particles		= damage_fx\burn_creatures00 ;
 
 idle_sound			= ambient\fire2						;постоянный звук
 blowout_sound		= ambient\fire2		;во время выброса(удара) в центре аномалии	
@@ -671,12 +671,12 @@ light_height		= 1.5			;подъем источника света на высоту
 idle_light			= on
 idle_light_range	= 5.0
 idle_light_range_delta = 0.4
-idle_light_anim		= warning_01
+idle_light_anim		= koster_01
 idle_light_height	= 1.5			;подъем источника света на высоту
 
-awaking_time		= 1000
+awaking_time		= 500
 blowout_time		= 300	
-accamulate_time		= 1000
+accamulate_time		= 500
 
 visible_by_detector = off
 
