--- a/xrStalker/zones.ltx
+++ b/xrStalker/zones.ltx
@@ -657,7 +657,7 @@ disable_time		= 0	;время игнорирования неживого объекта в зоне (-1 если не нужно
 disable_time_small	= 500		;время игнорирования маленького неживого объекта в зоне (-1 если не нужно)
 disable_idle_time	= 50000	;время отключения idle партиклов
 
-ignore_nonalive		= true
+ignore_nonalive		= false
 ignore_small		= false
 ignore_artefacts	= true
 
