--- a/xrStalker/w_ak74.ltx
+++ b/xrStalker/w_ak74.ltx
@@ -22,7 +22,7 @@ ammo_mag_size			= 30				; clip (magazine) size
 ammo_class				= ammo_5.45x39_fmj, ammo_5.45x39_ap ; name of the ltx-section of used ammo 
 grenade_class			= ammo_vog-25, ammo_vog-25p			; name of the ltx-section of used grenades 
 
-hand_dependence			= 2									; how many hands (1 or 2) we used to hold weapon in
+hand_dependence			= 1									; how many hands (1 or 2) we used to hold weapon in
 	
 slot 					= 2									; number of slot in inventory we put weapon in (1 - knife slot, 2 - pistol, 3 - rifle, 4 - grenade, 5 - apparatus)
 animation_slot			= 2									; type of the animation that will be used
@@ -92,7 +92,7 @@ rpm                      	= 600						; max round per minute
 hud                      	= wpn_ak74_hud				; name of the section of the hud
 
 position         	        = 0.01, -0.15, 0.13			; position (offset) and orientation of the weapon in the hands of character
-orientation      	        = 0.5, -6.5, -5				; (3rd person view)
+orientation      	        = 0,0,0 ;0.5, -6.5, -5				; (3rd person view)
 
 visual         		        = weapons\ak74\wpn_ak74		; name of the model for 3rd person view
 
