--- a/xrStalker/w_ak74.ltx
+++ b/xrStalker/w_ak74.ltx
@@ -91,8 +91,8 @@ rpm                      	= 600						; max round per minute
 
 hud                      	= wpn_ak74_hud				; name of the section of the hud
 
-position         	        = -0.0, -0.13, 0.15.3 ;0.01, -0.15, 0.13			; position (offset) and orientation of the weapon in the hands of character
-orientation      	        = 14,6,-5 ;0.5, -6.5, -5				; (3rd person view)
+position         	        = 0,0,0 ;-0.0, -0.13, 0.15.3 ;0.01, -0.15, 0.13			; position (offset) and orientation of the weapon in the hands of character
+orientation      	        = 0,0,0 ;14,6,-5 ;0.5, -6.5, -5				; (3rd person view)
 
 visual         		        = weapons\ak74\wpn_ak74		; name of the model for 3rd person view
 
