--- a/xr_3da/xrGame/w_ak74.ltx
+++ b/xr_3da/xrGame/w_ak74.ltx
@@ -69,14 +69,14 @@ misfire_probability 		= 0.0001	;вероятность осечки при максимальном износе
 condition_shot_dec 			= 0.00003	;увеличение износа при каждом выстреле
 ;-----------------------------------------------------------------------------------
 
-fire_point             		=  0,0.219,0.736 ;0.0, 0.22, 0.65			; position (3rd person view) for particles of fire 
-fire_point2            		=  0,0.219,0.829 ;0.0, 0.2, 0.72			; position (3rd person view) for particles of fire (when shooting with secondary fire)
+fire_point             		=  0,0.219,0.736			; position (3rd person view) for particles of fire 
+fire_point2            		=  0,0.219,0.829			; position (3rd person view) for particles of fire (when shooting with secondary fire)
 
 flame_particles				= weapons\generic_weapon05	; particles for shooting effects
 smoke_particles				= weapons\generic_shoot_00
 grenade_flame_particles		= weapons\generic_weapon01
 	
-shell_point		 			= 0,0.219,0.246 ;0.05, 0.22, 0.06			; position (3rd person view) for shell to throw out
+shell_point		 			= 0,0.219,0.246				; position (3rd person view) for shell to throw out
 shell_particles	 			= weapons\generic_shells	; name of the particles for shells
 
 ; ttc
@@ -91,8 +91,8 @@ rpm                      	= 600						; max round per minute
 
 hud                      	= wpn_ak74_hud				; name of the section of the hud
 
-position         	        = 0,-0.144,0 ;-0.0, -0.13, 0.15.3 ;0.01, -0.15, 0.13			; position (offset) and orientation of the weapon in the hands of character
-orientation      	        = 0,0,0 ;14,6,-5 ;0.5, -6.5, -5				; (3rd person view)
+position         	        = 0,-0.144,0				; position (offset) and orientation of the weapon in the hands of character
+orientation      	        = 0,0,0						; (3rd person view)
 
 visual         		        = weapons\ak74\wpn_ak74		; name of the model for 3rd person view
 
@@ -167,8 +167,8 @@ silencer_light_time 		= 0.2
 shell_point     	   	 	= 0.15, 0.0, -0.05
 shell_dir			     	= 0.0, 1.0, 0.0
 
-fire_point               	= 0.090000,0.020000,-0.060000
-fire_point2              	= 0.30, 0.00, 0.05 ;0.45, -0.07, -0.05	;0.45, 0.0, 0.04
+fire_point               	= 0.09,0.020,-0.06
+fire_point2              	= 0.30, 0.00, 0.05
 fire_bone               	= wpn_body
 
 orientation             	= 0, 0, 0		
