--- a/xrStalker/game_relations.ltx
+++ b/xrStalker/game_relations.ltx
@@ -1,7 +1,13 @@
 [game_relations]
+;реальное разделение на группы репутаций на шкалы
 rating			= novice, 10, veteran, 50, master, 100, super_master
 reputation		= bad, -20, neutral, 20, good, 40, very_good
-goodwill        = deadly_enemy, -20, enemy, 0, hostile, 20, indifferent, 40, companionable, 50, friendly
+
+;шкала для вывода имен в интерфейсе
+rating_names		= novice, 10, veteran, 50, master, 100, super_master
+reputation_names	= bad, -20, neutral, 20, good, 40, very_good
+goodwill_names      = deadly_enemy, -20, enemy, 0, hostile, 20, indifferent, 40, companionable, 50, friendly
+
 
 ;пороговые значения для отношения персонажей
 attitude_neutal_threshold = -25 
