--- a/xrStalker/game_relations.ltx
+++ b/xrStalker/game_relations.ltx
@@ -3,7 +3,8 @@
 rating			= novice, 10, veteran, 50, master, 100, super_master
 reputation		= bad, -20, neutral, 20, good, 40, very_good
 
-;шкала для вывода имен в интерфейсе
+;шкалы для вывода названий вместо чисел 
+;рейтингов, репутаций и благосклонности в интерфейсе
 rating_names		= novice, 10, veteran, 50, master, 100, super_master
 reputation_names	= bad, -20, neutral, 20, good, 40, very_good
 goodwill_names      = deadly_enemy, -20, enemy, 0, hostile, 20, indifferent, 40, companionable, 50, friendly
