--- a/xr_3da/xrGame/m_army.ltx
+++ b/xr_3da/xrGame/m_army.ltx
@@ -45,6 +45,9 @@ ph_crash_speed_min       = 16
 ph_crash_speed_max       = 30
 ph_mass 				 = 80
 
+weapon_bone0			 = bip01_r_hand
+weapon_bone1			 = bip01_l_finger1
+weapon_bone2			 = bip01_r_finger2
 
 weapon_usage		     = 1			; boolean
 bone_torso_weapon	     = bip01_r_hand
@@ -205,6 +208,9 @@ ph_crash_speed_min       = 16
 ph_crash_speed_max       = 30
 ph_mass 				 = 80
 
+weapon_bone0			 = bip01_r_hand
+weapon_bone1			 = bip01_l_finger1
+weapon_bone2			 = bip01_r_finger2
 
 weapon_usage		     = 1			; boolean
 bone_torso_weapon	     = bip01_r_hand
@@ -364,6 +370,9 @@ ph_crash_speed_min       = 16
 ph_crash_speed_max       = 30
 ph_mass 				 = 80
 
+weapon_bone0			 = bip01_r_hand
+weapon_bone1			 = bip01_l_finger1
+weapon_bone2			 = bip01_r_finger2
 
 weapon_usage		     = 1			; boolean
 bone_torso_weapon	     = bip01_r_hand
@@ -523,6 +532,9 @@ ph_crash_speed_min       = 16
 ph_crash_speed_max       = 30
 ph_mass 				 = 80
 
+weapon_bone0			 = bip01_r_hand
+weapon_bone1			 = bip01_l_finger1
+weapon_bone2			 = bip01_r_finger2
 
 weapon_usage		     = 1			; boolean
 bone_torso_weapon	     = bip01_r_hand
