--- a/xr_3da/xrGame/m_fraction.ltx
+++ b/xr_3da/xrGame/m_fraction.ltx
@@ -45,6 +45,9 @@ ph_crash_speed_min       = 16
 ph_crash_speed_max       = 30
 ph_mass 				 = 80
 
+weapon_bone0			 = bip01_r_hand
+weapon_bone1			 = bip01_l_finger1
+weapon_bone2			 = bip01_r_finger2
 
 weapon_usage		     = 1			; boolean
 bone_torso_weapon	     = bip01_r_hand
@@ -233,6 +236,9 @@ ph_crash_speed_min       = 16
 ph_crash_speed_max       = 30
 ph_mass 				 = 80
 
+weapon_bone0			 = bip01_r_hand
+weapon_bone1			 = bip01_l_finger1
+weapon_bone2			 = bip01_r_finger2
 
 weapon_usage		     = 1			; boolean
 bone_torso_weapon	     = bip01_r_hand
@@ -419,6 +425,9 @@ ph_crash_speed_min       = 16
 ph_crash_speed_max       = 30
 ph_mass 				 = 80
 
+weapon_bone0			 = bip01_r_hand
+weapon_bone1			 = bip01_l_finger1
+weapon_bone2			 = bip01_r_finger2
 
 weapon_usage		     = 1			; boolean
 bone_torso_weapon	     = bip01_r_hand
@@ -605,6 +614,9 @@ ph_crash_speed_min       = 16
 ph_crash_speed_max       = 30
 ph_mass 				 = 80
 
+weapon_bone0			 = bip01_r_hand
+weapon_bone1			 = bip01_l_finger1
+weapon_bone2			 = bip01_r_finger2
 
 weapon_usage		     = 1			; boolean
 bone_torso_weapon	     = bip01_r_hand
