--- a/xrStalker/actor.ltx
+++ b/xrStalker/actor.ltx
@@ -43,6 +43,11 @@ ph_skeleton_airr_ang_factor  = 1.5
 ph_skeleton_hinger_factor1   = 1
 ph_skeleton_ddelay	     	 = 15
 ph_skel_fatal_impulse_factor = 8
+
+weapon_bone0			 = bip01_r_hand
+weapon_bone1			 = bip01_l_finger1
+weapon_bone2			 = bip01_r_finger2
+
 damage			 = actor_damage
 
 
