--- a/xr_3da/xrGame/game.ltx
+++ b/xr_3da/xrGame/game.ltx
@@ -109,6 +109,7 @@ level106
 level107
 level108
 level109
+level110
 
 [level01]
   name    = fog_dima1
@@ -733,6 +734,12 @@ level109
  offset  = -800.0,     2000.0,    0.0
  id   = 109
  
+ [level110]
+ name   = vovan_test
+ caption = "vovan_test"
+ offset  = -800.0,     2000.0,    0.0
+ id   = 110
+
 [location_0]
   000          = "..."
   001          = "ύρκειο (escape)"
