--- a/xr_3da/xrGame/game_relations.ltx
+++ b/xr_3da/xrGame/game_relations.ltx
@@ -53,3 +53,31 @@ bad			  =      0,         0,        0,         0
 neutral		  =      0,         0,        0,         0
 good		  =      0,         0,        0,         0
 very_good     =      0,         0,        0,         0
+
+
+;
+; очки рейтинга и репутации начисляемые за определенные действия
+;
+
+
+;коэффициенты "сочувствия" группировок
+;после воздействия на одного из членов группировки
+;goodwill его распространится на остальных членов группировки
+;с определенным коэффициентом
+[communities_sympathy]
+stalker		=         0.1
+monolith	=         1.0
+military	=         2.0
+killer		=         0.3
+ecolog		=         1.0
+dolg		=         1.0
+freedom		=         1.0
+bandit		=         0.0
+
+
+;очки рейтинга, репутации и доброжелательности начисляемые
+;в зависимости от совершенного действия
+[action_points]
+friend_attack = -10
+neutral_attack = -20
+
