--- a/xrStalker/w_ak74u.ltx
+++ b/xrStalker/w_ak74u.ltx
@@ -6,7 +6,7 @@ $npc					= on
 $prefetch 				= 8
 scheduled				= off               ;[] option for ALife Simulator
 cform               	= skeleton
-class               	= W_AK74			; class of the weapon that corresponding to CPP class
+class               	= W_LR300			; class of the weapon that corresponding to CPP class
 min_radius          	= 30				; [] for AI
 max_radius          	= 100				; [] for AI
 	
@@ -69,7 +69,7 @@ condition_shot_dec 			= 0.00003	;увеличение износа при каждом выстреле
 ;-----------------------------------------------------------------------------------
 
 fire_point             		=  0.0, 0.262, 0.447		; position (3rd person view) for particles of fire 
-fire_point2            		=  0.0, 0.262, 0.547		; position (3rd person view) for particles of fire (when shooting with secondary fire)
+;fire_point2            		=  0.0, 0.262, 0.547		; position (3rd person view) for particles of fire (when shooting with secondary fire)
 
 flame_particles				= weapons\generic_weapon05	; particles for shooting effects
 smoke_particles				= weapons\generic_shoot_00
