--- a/xrStalker/game_relations.ltx
+++ b/xrStalker/game_relations.ltx
@@ -78,6 +78,11 @@ bandit		=         0.0
 ;очки рейтинга, репутации и доброжелательности начисляемые
 ;в зависимости от совершенного действия
 [action_points]
-friend_attack = -10
-neutral_attack = -20
+friend_attack_reputation		= -5
+friend_attack_goodwill			= -10
 
+neutral_attack_reputation		= -15
+neutral_attack_goodwill			= -20
+
+friend_kill_reputation			= -15
+neutral_kill_reputation			= -15
