--- a/xrStalker/M_Cat.ltx
+++ b/xrStalker/M_Cat.ltx
@@ -47,7 +47,7 @@ stand_drag_0		=	   1,	    0.2,     1,	    0.25,    0.7,    0.7,     1.0,     0.7
 GroupControlSection	= spawn_group
 $spawn              = "monsters\cat"			; option for Level Editor
 $npc			    = on						; option for Level Editor
-$prefetch 			= 16
+;$prefetch 			= 16
 Scheduled		    = on						; option for ALife Simulator
 Human		     	= off						; option for ALife Simulator
 Health				= 250						; option for ALife Simulator
