--- a/xrStalker/game_relations.ltx
+++ b/xrStalker/game_relations.ltx
@@ -84,5 +84,9 @@ friend_attack_goodwill			= -10
 neutral_attack_reputation		= -15
 neutral_attack_goodwill			= -20
 
+friend_kill_goodwill			= -20
+neutral_kill_goodwill			= -10
+enemy_kill_goodwill				= -5
+
 friend_kill_reputation			= -15
 neutral_kill_reputation			= -15
