--- a/xrStalker/game_relations.ltx
+++ b/xrStalker/game_relations.ltx
@@ -78,11 +78,14 @@ bandit		=         0.0
 ;очки рейтинга, репутации и доброжелательности начисляемые
 ;в зависимости от совершенного действия
 [action_points]
-friend_attack_reputation		= -5
-friend_attack_goodwill			= -10
 
-neutral_attack_reputation		= -15
+friend_attack_goodwill			= -10
 neutral_attack_goodwill			= -20
+enemy_attack_goodwill			= -2
+
+friend_attack_reputation		= -10
+neutral_attack_reputation		= -15
+enemy_attack_reputation			= 0
 
 friend_kill_goodwill			= -20
 neutral_kill_goodwill			= -10
@@ -90,3 +93,4 @@ enemy_kill_goodwill				= -5
 
 friend_kill_reputation			= -15
 neutral_kill_reputation			= -15
+enemy_kill_reputation			= 0
