--- a/xrStalker/game_relations.ltx
+++ b/xrStalker/game_relations.ltx
@@ -46,6 +46,8 @@ master        =        -5,         0,        0,            0
 super_master  =        -5,         0,        0,            0
 
 
+
+
 [reputation_relations]
 ;				   bad,      neutral,   good,     very_good
 ;================================================================
@@ -53,7 +55,6 @@ bad			  =      0,         0,        0,         0
 neutral		  =      0,         0,        0,         0
 good		  =      0,         0,        0,         0
 very_good     =      0,         0,        0,         0
-
 
 ;
 ; очки рейтинга и репутации начисляемые за определенные действия
@@ -73,6 +74,15 @@ ecolog		=         1.0
 dolg		=         1.0
 freedom		=         1.0
 bandit		=         0.0
+
+;
+;очки рейтинга, получаемые за убийство персонажа
+;с определенным статусом
+[rank_kill_point]
+novice        =        2
+veteran       =        6
+master        =        8
+super_master  =        10
 
 
 ;очки рейтинга, репутации и доброжелательности начисляемые
