--- a/xrStalker/game_relations.ltx
+++ b/xrStalker/game_relations.ltx
@@ -78,7 +78,7 @@ bandit		=         0.0
 ;
 ;очки рейтинга, получаемые за убийство персонажа
 ;с определенным статусом
-[rank_kill_point]
+[rank_kill_points]
 novice        =        2
 veteran       =        6
 master        =        8
