--- a/xrStalker/game_relations.ltx
+++ b/xrStalker/game_relations.ltx
@@ -20,6 +20,9 @@ goodwill_neutal = 0
 goodwill_friend = 100
 
 
+;порог величины хита, который нанес актер атакующему,
+;после которого регистрируется помощь актера персонажу которого атаковали
+help_hit_threshold = 10
 
 ;названия группировок
 communities		= stalker, 1, monolith, 2, military, 3, killer, 4, ecolog, 5, dolg, 6, freedom, 7, bandit, 8
