--- a/xr_3da/xrGame/game_relations.ltx
+++ b/xr_3da/xrGame/game_relations.ltx
@@ -20,9 +20,22 @@ goodwill_neutal = 0
 goodwill_friend = 100
 
 
+;
+; помощь актера персонажу во время боя
+;
+
 ;порог величины хита, который нанес актер атакующему,
 ;после которого регистрируется помощь актера персонажу которого атаковали
 help_hit_threshold = 10
+
+friend_fight_help_goodwill   = 15
+neutral_fight_help_goodwill	 = 15 
+enemy_fight_help_goodwill    = 15
+
+friend_fight_help_reputation  = 10
+neutral_fight_help_reputation = 10
+enemy_fight_help_reputation	  = 10
+
 
 ;названия группировок
 communities		= stalker, 1, monolith, 2, military, 3, killer, 4, ecolog, 5, dolg, 6, freedom, 7, bandit, 8
