--- a/xr_3da/xrGame/game_relations.ltx
+++ b/xr_3da/xrGame/game_relations.ltx
@@ -28,6 +28,8 @@ goodwill_friend = 100
 ;после которого регистрируется помощь актера персонажу которого атаковали
 help_hit_threshold = 10
 
+fight_remember_time = 10		;(c) время которое про драку будет помнить реестр
+
 friend_fight_help_goodwill   = 15
 neutral_fight_help_goodwill	 = 15 
 enemy_fight_help_goodwill    = 15
