--- a/xrStalker/deathmatch_game.ltx
+++ b/xrStalker/deathmatch_game.ltx
@@ -72,7 +72,17 @@ round_draw		= 50
 round_loose_minor		= 0
 round_win_minor		= 0
 
-
 wpn_pm_cost		= 0
 
 default_items	= wpn_knife
+;//---- indicator data --------
+indicator_r1 = 0.2
+indicator_r2 = 0.2
+
+indicator_x = 0.0
+indicator_y = 0.5
+indicator_z = 0.0
+
+indicator_shader = friendly_indicator
+indicator_texture = ui\ui_blueteam
+
