--- a/xrStalker/artefacthunt_game.ltx
+++ b/xrStalker/artefacthunt_game.ltx
@@ -81,6 +81,17 @@ rivals_wiped_out		= 50;
 
 wpn_pb_cost	=	0
 
+;//---- indicator data --------
+indicator_r1 = 0.2
+indicator_r2 = 0.2
+
+indicator_x = 0.0
+indicator_y = 0.5
+indicator_z = 0.0
+
+indicator_shader = friendly_indicator
+indicator_texture = ui\ui_greenteam
+
 [artefacthunt_team2]
 slot1 = wpn_knife
 slot2 = wpn_pm, wpn_hpsa, wpn_walther 
@@ -121,3 +132,14 @@ round_win_minor		= 50
 rivals_wiped_out		= 50;
 
 wpn_pm_cost		= 0
+
+;//---- indicator data --------
+indicator_r1 = 0.2
+indicator_r2 = 0.2
+
+indicator_x = 0.0
+indicator_y = 0.5
+indicator_z = 0.0
+
+indicator_shader = friendly_indicator
+indicator_texture = ui\ui_blueteam
