--- a/xr_3da/xrGame/teamdeathmatch_game.ltx
+++ b/xr_3da/xrGame/teamdeathmatch_game.ltx
@@ -78,6 +78,17 @@ round_win_minor		= 0
 
 wpn_pb_cost	= 0
 
+;//---- indicator data --------
+indicator_r1 = 0.2
+indicator_r2 = 0.2
+
+indicator_x = 0.0
+indicator_y = 0.5
+indicator_z = 0.0
+
+indicator_shader = friendly_indicator
+indicator_texture = ui\ui_greenteam
+
 [teamdeathmatch_team2]
 slot1 = wpn_knife
 slot2 = wpn_pm, wpn_hpsa, wpn_walther 
@@ -116,3 +127,14 @@ round_loose_minor		= 0
 round_win_minor		= 0
 
 wpn_pm_cost		= 0
+
+;//---- indicator data --------
+indicator_r1 = 0.2
+indicator_r2 = 0.2
+
+indicator_x = 0.0
+indicator_y = 0.5
+indicator_z = 0.0
+
+indicator_shader = friendly_indicator
+indicator_texture = ui\ui_blueteam
