Temporary file created by Visual Studio .NET to detect Microsoft Visual SourceSafe capabilities.

--- a/xrStalker/M_Boar.ltx
+++ b/xrStalker/M_Boar.ltx
@@ -45,7 +45,7 @@ stand_steal_0		=	  1,	0.2,    1,	     0.25,    0.7,    0.7,    1.0,     0.7,   1
 stand_drag_0		=	  1,	0.2,    1,	     0.25,    0.7,    0.7,    1.0,     0.7,   1.0
 
 [m_boar_e]
-
+SpaceRestrictionSection	= space_restrictor,zone_mosquito_bald
 GroupControlSection		= spawn_group
 $spawn					= "monsters\boar"					 ; option for Level Editor
 $npc					= on								 ; option for Level Editor
