--- a/xrStalker/game_relations.ltx
+++ b/xrStalker/game_relations.ltx
@@ -22,19 +22,20 @@ goodwill_friend = 100
 
 
 ;названия группировок
-communities		= stalker, 1, monolith, 2, military, 3, killer, 4, ecolog, 5, dolg, 6, freedom, 7, bandit, 8
+communities		= stalker, 1, monolith, 2, military, 3, killer, 4, ecolog, 1, dolg, 1, freedom, 1, bandit, 1, zombied, 23
 
 [communities_relations]
-;				stalker, monolith, military, killer, ecolog, dolg, svoboda, bandit
-======================================================================================
-stalker		=         0,        0,       20,      0,      0,    0,       0,      0 
-monolith	=         0,        0,        0,      0,      0,    0,       0,      0 
-military	=        50,        0,       30,      0,      0,    0,       0,      0 
-killer		=         0,        0,        0,      0,      0,    0,       0,      0 
-ecolog		=         0,        0,        0,      0,      0,    0,       0,      0 
-dolg		=         0,        0,        0,      0,      0,    0,       0,      0 
-freedom		=         0,        0,        0,      0,      0,    0,       0,      0 
-bandit		=         0,        0,        0,      0,      0,    0,       0,      0 
+;				stalker, monolith, military, killer, ecolog, dolg, svoboda, bandit, zombied
+============================================================================================
+stalker		=         0,        0,       20,      0,      0,    0,       0,      0,      0 
+monolith	=         0,        0,        0,      0,      0,    0,       0,      0,      0 
+military	=        50,        0,       30,      0,      0,    0,       0,      0,      0 
+killer		=         0,        0,        0,      0,      0,    0,       0,      0,      0 
+ecolog		=         0,        0,        0,      0,      0,    0,       0,      0,      0 
+dolg		=         0,        0,        0,      0,      0,    0,       0,      0,      0 
+freedom		=         0,        0,        0,      0,      0,    0,       0,      0,      0 
+bandit		=         0,        0,        0,      0,      0,    0,       0,      0,      0 
+zombied		=         0,        0,        0,      0,      0,    0,       0,      0,      0 
 
 
 [rank_relations]
