--- a/xrStalker/game_relations.ltx
+++ b/xrStalker/game_relations.ltx
@@ -75,6 +75,7 @@ ecolog		=         1.0
 dolg		=         1.0
 freedom		=         1.0
 bandit		=         0.0
+zombied		=         0.0
 
 ;
 ;очки рейтинга, получаемые за убийство персонажа
